<resources>
    <string name="app_name">Yoda</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="by_purplefront">by PurpleFront</string>
    <string name="customer_feedback_app">School App</string>
    <string name="nointernetaccess">No Internet Access</string>
    <string name="nointernetconnection">No Internet Connection</string>
    <string name="unknownerror">Some thing went wrong contact PurpleFront for the issue.</string>
    <string name="unknownerror2">Some error occurred try again</string>
    <string name="unknownerror4">An error occurred while accessing Database try clearing Database and use email you are already registered with</string>
    <string name="unknownerror3">An Unknown error occurred try again restarting the app</string>
    <string name="unknownerror5">Some error occurred please try again after some time</string>
    <string name="unknownerror6">Error contacting server try again after some time</string>
    <string name="unknownerror7">No response from server</string>
    <string name="unknownerror8">Error contacting server</string>
    <string name="unknownerror9">Error accessing server try reloading the page</string>
    <string name="error_occured">No Internet Access an error has occurred try again</string>
    <string name="error_school_inactive">Your school is currently inactive. please contact your school</string>
    <string name="error_profile_inactive">Your account is currently inactive. please contact your school</string>
    <string name="permission_error">You do not have enough permission to send message</string>
    <string name="permission_error_calender">You do not have enough permission to create event</string>
    <string name="powered_by_purplefront">Powered by PurpleFront</string>
    <string name="loading">Loading&#8230;</string>
    <string name="please_wait">Please wait</string>
    <string name="message">New Message:</string>
    <string name="sender_id">963510041615</string>
    <string name="search">Search</string>
    <string name="logout_warning">Are you sure want to logout?</string>
    <string name="url_reference">http://104.211.242.168/apps_production/school/</string>
    <string name="logout">Logout</string>
    <string name="notallowed">You did not have enough authorization</string>
    <string name="roleerror">You do not have any role defined</string>
    <string name="website2" translatable="false">www.yodaapp.com</string>
    <string name="thank_you_message">Thank you for contacting us we will get back to you shortly.</string>
    <string-array name="planets_array">
        <item>School</item>
        <item>Communications</item>
        <item>Calendar</item>
        <item>View/Edit Profile</item>
        <item>Change Password</item>
        <item>Logout</item>
        <item>Exit</item>
    </string-array>
    <string-array name="group_members">
        <item>School</item>
        <item>Branch</item>
        <item>Grade</item>
        <item>Section</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="changepassword_heading">Change Password</string>
    <string name="changepassword_email">Username</string>
    <string name="changepassword_oldpassword">Current Password</string>
    <string name="changepassword_oldpassword_hint">Enter current password</string>
    <string name="changepassword_newpassword">New password</string>
    <string name="changepassword_newpassword_hint">Enter new password</string>
    <string name="changepassword_confirmnewpassword">Confirm new Password</string>
    <string name="changepassword_confirmnewpassword_hint">Enter confirm password</string>
    <string name="changepassword_showpassword">Show Password</string>
    <string name="Changepassword_submit">Submit</string>
    <string name="changepassword_success">Your password has been changed successfully</string>
    <string name="vieweditprofile_heading">View/Edit Profile</string>
    <string name="vieweditprofile_name">Name</string>
    <string name="vieweditprofile_name_hint">Enter your name</string>
    <string name="vieweditprofile_email">Email</string>
    <string name="vieweditprofile_email_hint">Enter your email address</string>
    <string name="vieweditprofile_setpassword">Set Password</string>
    <string name="vieweditprofile_bsname">Business name</string>
    <string name="vieweditprofile_bsname_hint">Enter your business name</string>
    <string name="vieweditprofile_category">Business category</string>
    <string name="vieweditprofile_phone">Phone</string>
    <string name="vieweditprofile_phone_hint">Enter your 10 digit mobile number</string>
    <string name="vieweditprofile_fbpage">FB page</string>
    <string name="vieweditprofile_fbpage_hint">Enter your Facebook page name</string>
    <string name="vieweditprofile_website">Website</string>
    <string name="vieweditprofile_website_hint">Enter your official website url</string>
    <string name="vieweditprofile_logo">Logo</string>
    <string name="vieweditprofile_logo_discription">Select your official logo</string>
    <string name="vieweditprofile_submit">Save</string>
    <string name="preregistration_heading">If you are an existing user please select existing account otherwise select new account</string>
    <string name="preregistration_existinguser">Log In</string>
    <string name="preregistration_newuser">Sign Up</string>
    <string name="school_name">School Name </string>
    <string name="name_2">Name </string>
    <string name="email_2">Email</string>
    <string name="contact_2">Contact</string>
    <string name="user_type_2">User Type</string>
    <string name="registration_heading">Create Account</string>
    <string name="registration_firsttime">Since this is your first time so create your account first</string>
    <string name="registration_name">Name</string>
    <string name="registration_name_hint">Name</string>
    <string name="registration_email">Email</string>
    <string name="registration_email_hint">Email</string>
    <string name="registration_setpassword">Password</string>
    <string name="registration_setpassword_hint">Password</string>
    <string name="registration_setpasswordconfirm">Confirm Password</string>
    <string name="registration_setpasswordconfirm_hint">Confirm Password</string>
    <string name="registration_submit">Next</string>
    <string name="registration_showpassword">Show Password</string>
    <string name="resetpassword_heading">Reset Password</string>
    <string name="resetpassword_textemail">Enter your username (Email)</string>
    <string name="resetpassword_submit">Reset Password</string>
    <string name="resetpassword_note">Your username must match with our records. You will get an email with the password information.</string>
    <string name="resetpassword_success">Success</string>
    <string name="resetpassword_success_message">Your password has been reset. Check your email for instructions.</string>
    <string name="existinguser_heading">Existing Account</string>
    <string name="existinguser_note">If you are existing user enter your email id and password otherwise go back and click new user</string>
    <string name="existinguser_username">Username</string>
    <string name="existinguser_username_hint">Enter your username</string>
    <string name="existinguser_email_hint">Enter your email</string>
    <string name="existinguser_password">Password</string>
    <string name="existinguser_password_hint">Enter your password</string>
    <string name="existinguser_showpassword">Show Password</string>
    <string name="existinguser_login">Login</string>
    <string name="existinguser_forgetpassword">Forgot password</string>
    <string name="school_creation_school_name">Enter school name</string>
    <string name="school_creation_school_name_hint">School name</string>
    <string name="school_creation_your_name">Enter your name</string>
    <string name="school_creation_your_name_hint">Name</string>
    <string name="school_creation_email">Enter email-id</string>
    <string name="school_creation_email_hint">Email-id</string>
    <string name="school_creation_password">Enter password</string>
    <string name="school_creation_password_hint">Password</string>
    <string name="school_creation_confirm_password">Enter confirm password</string>
    <string name="branch_creation_branch_name">Enter branch name</string>
    <string name="branch_creation_branch_name_hint">Branch name</string>
    <string name="branch_creation_type_chech">Main branch</string>
    <string name="branch_type">Branch Type</string>
    <string name="branch_hea1d">Branch Head</string>
    <string name="staff_creation_heading">Create New Staff</string>
    <string name="grade_existing">Grade in this branch</string>
    <string name="grade_creation">Create new grade</string>
    <string name="section_head">Section Head</string>
    <string name="section_head2">Section Head : </string>
    <string name="section_name">Section Name</string>
    <string name="assign_role">Assign Role</string>
    <string name="staff_username_size">Username should have atleast 6 characters</string>
    <string name="staff_noroles_selected">No roles exists for current staff</string>
    <string name="confirm_inactivate_staff">Are you sure want to inactivate the staff?</string>
    <string name="confirm_remove_section">Are you sure want to remove the section?</string>
    <string name="confirm_remove_subject">Are you sure want to remove the subject?</string>
    <string name="confirm_remove_grade">Are you sure want to remove the grade?</string>
    <string name="confirm_remove_branch">Are you sure want to remove the branch?</string>
    <string name="student_creation_image">Upload student image</string>
    <string name="student_creation_heading">Add New Student</string>
    <string name="student_edit_heading">Edit Student Details</string>
    <string name="students_assigned">Students Already Assigned</string>
    <string name="sudent_creation_success">Student has successfully been created</string>
    <string name="student_image_change">Upload new Student Image</string>
    <string name="confirm_upload">Confirm Upload</string>
    <string name="student_update">Student Details has successfully updated</string>
    <string name="section_student_view_student_detail">Student Details</string>
    <string name="section_student_view_name">Name</string>
    <string name="section_student_view_allergies">Allergies</string>
    <string name="section_student_view_branch">Branch</string>
    <string name="event_name">Event name</string>
    <string name="name">Name</string>
    <string name="allergies">Allergies or special requirement</string>
    <string name="event_detail">Event detail</string>
    <string name="userid">Username</string>
    <string name="branch">Branch</string>
    <string name="branch2">Branch : </string>
    <string name="grade">Grades</string>
    <string name="grade2">Grade : </string>
    <string name="section">Section</string>
    <string name="school">School</string>
    <string name="details">Details</string>
    <string name="event_start">Event Start</string>
    <string name="event_end">Event End</string>
    <string name="start_date">Select start date</string>
    <string name="end_date">Select end date</string>
    <string name="add_subject">Add Subject</string>
    <string name="subject_section">Subjects in this section</string>
    <string name="student_section">Students in this section</string>
    <string name="student_section_add">Add student to section</string>
    <string name="change_head_teacher">Add/Change head teacher of this section</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="create">Create</string>
    <string name="action">Actions</string>
</resources>