<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    style="@style/layout" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/school_creation_school_name"
            android:visibility="gone"
            style="@style/TextviewStyle_space"
            android:id="@+id/textView7" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textNoSuggestions"
            android:hint="@string/school_creation_school_name_hint"
            android:ems="10"
            style="@style/EditTextviewStyle"
            android:id="@+id/school_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/school_creation_your_name"
            android:visibility="gone"
            style="@style/TextviewStyle_space"
            android:id="@+id/textView11" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/school_creation_your_name_hint"
            style="@style/EditTextviewStyle"
            android:id="@+id/school_your_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/school_creation_email"
            android:visibility="gone"
            style="@style/TextviewStyle_space"
            android:id="@+id/textView19" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:hint="@string/school_creation_email_hint"
            style="@style/EditTextviewStyle"
            android:ems="10"
            android:id="@+id/school_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/school_creation_password"
            android:visibility="gone"
            style="@style/TextviewStyle_space"
            android:id="@+id/textView18" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/school_creation_password_hint"
            android:ems="10"
            style="@style/EditTextviewStyle"
            android:id="@+id/school_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/school_creation_confirm_password"
            android:visibility="gone"
            style="@style/TextviewStyle_space"
            android:id="@+id/textView20" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/school_creation_confirm_password"
            android:ems="10"
            style="@style/EditTextviewStyle"
            android:id="@+id/school_confirm_password" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            style="@style/Button_style2"
            android:id="@+id/school_submit"
            android:background="@color/blue"
            android:textColor="@color/md_white_1000"
            android:layout_marginTop="50dp"
            android:layout_gravity="center" />
    </LinearLayout>
</ScrollView>