<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" style="@style/layout" android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName|textNoSuggestions"
            style="@style/EditTextviewStyle"
            android:id="@+id/student_add_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/allergies"
            android:inputType="text"
            style="@style/EditTextviewStyle"
            android:id="@+id/student_add_allergies" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextviewStyle_space"
            android:text="@string/branch"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:id="@+id/role_assign_branch"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextviewStyle_space"
            android:text="@string/grade"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:id="@+id/role_assign_grade"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextviewStyle_space"
            android:text="@string/section"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:id="@+id/role_assign_section"/>



        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/btn_save"
            android:layout_gravity="center"
            style="@style/Button_style2"/>

    </LinearLayout>


</ScrollView>